--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Código de instalación Cliengo para Juanesva@gmail.com --> 
+    <script 
+      type="text/javascript">
+      (function () { var ldk = document.createElement('script'); 
+      ldk.type = 'text/javascript'; 
+      ldk.async = 
+      true; 
+      ldk.src = 'https://s.cliengo.com/weboptimizer/61c8c6cc1dc9e5002a3e3acb/61c8c6ce1dc9e5002a3e3acf.js?platform=dashboard'; 
+      var s = document.getElementsByTagName('script')[0]; 
+      s.parentNode.insertBefore(ldk, s); })();
+    </script>
   </body>
 </html>
